force-app/main/default/objects/df_122_vrdnadshavare__c/df_122_vrdnadshavare__c.object-meta.xml
<CustomObject>
    <label>Sekundära vårdnadshavare</label>
    <nameField>
        <label>Sekundära vårdnadshavare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sekundära vårdnadshavares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>