force-app/main/default/objects/df_122_vrdnadshavare__c/fields/frnamn_vrdnadshavare__c.field-meta.xml
<CustomField>
    <fullName>frnamn_vrdnadshavare__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>