force-app/main/default/objects/df_122_vrdnadshavare__c/fields/fullmakt_fr_person2_sekundr_vrge__c.field-meta.xml
<CustomField>
    <fullName>fullmakt_fr_person2_sekundr_vrge__c</fullName>
    <label>Fullmakt för (Person 2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>person_2_sekundr_vrge_person_1</fullName>
                <label>Person 1</label>
            </value>
            <value>
                <fullName>person_2_sekundr_vrge_person_2</fullName>
                <label>Person 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>