force-app/main/default/objects/df_122_vrdnadshavare__c/fields/personnummer_sekundr_vrdnadshava_261__c.field-meta.xml
<CustomField>
    <fullName>personnummer_sekundr_vrdnadshava_261__c</fullName>
    <label>Personnummer 0bdb2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>