force-app/main/default/objects/df_122_vrdnadshavare__c/fields/record_model_id__c.field-meta.xml
<CustomField>
    <fullName>record_model_id__c</fullName>
    <label>record_model_id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>