force-app/main/default/objects/df_122_vrdnadshavare__c/fields/vrdnadshavare_fullmaktshavare_pr_248__c.field-meta.xml
<CustomField>
    <fullName>vrdnadshavare_fullmaktshavare_pr_248__c</fullName>
    <label>Fullmaktshavare prioritet (perso 29c83</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>