force-app/main/default/objects/df_122_vrdnadshavare__c/fields/vrdnadshavare_ska_vre_fullmaktig_250__c.field-meta.xml
<CustomField>
    <fullName>vrdnadshavare_ska_vre_fullmaktig_250__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska väre fullmaktig e9e65</label>
    <type>Checkbox</type>
</CustomField>