force-app/main/default/objects/df_122_vrdnadshavare__c/fields/vrdnadshavare_ska_vre_fullmaktig_257__c.field-meta.xml
<CustomField>
    <fullName>vrdnadshavare_ska_vre_fullmaktig_257__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska väre fullmaktig (person2) 4ede3</label>
    <type>Checkbox</type>
</CustomField>