force-app/main/default/objects/df_122_vrdnadshavare__c/fields/vrdnadsprioritet__c.field-meta.xml
<CustomField>
    <fullName>vrdnadsprioritet__c</fullName>
    <label>Vårdnadsprioritet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>